[gd_scene load_steps=7 format=2]

[ext_resource path="res://panel.tres" type="StyleBox" id=1]
[ext_resource path="res://title.gd" type="Script" id=2]
[ext_resource path="res://title.res" type="DynamicFont" id=3]
[ext_resource path="res://large.res" type="DynamicFont" id=4]
[ext_resource path="res://normal.res" type="DynamicFont" id=5]
[ext_resource path="res://compact.res" type="DynamicFont" id=6]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.241058
margin_bottom = -0.241028
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hexagon" type="Node2D" parent="."]
process_priority = -5
modulate = Color( 1, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 249.301, 118.433 )
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="Polygon2D" parent="hexagon"]
scale = Vector2( 1.05, 1.05 )
polygon = PoolVector2Array( 0.0824432, -50.156, -42.8743, -25.2305, -43.935, 25.3276, -0.0943298, 50.6067, 43.5695, 25.5044, 43.9231, -25.5841 )

[node name="Label" type="Label" parent="."]
margin_left = 326.786
margin_top = 85.0446
margin_right = 398.786
margin_bottom = 99.0446
custom_fonts/font = ExtResource( 3 )
text = "Hexamatch"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seed" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.0
margin_top = -12.0
margin_right = 148.0
margin_bottom = 12.0
placeholder_text = "Seed for RNG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="worldCode" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.0
margin_top = 131.0
margin_right = 148.0
margin_bottom = 155.0
placeholder_text = "Code for world"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.0
margin_top = 23.4891
margin_right = 38.0
margin_bottom = 82.4891
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Go!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.5
margin_top = 96.9891
margin_right = 38.5
margin_bottom = 121.989
rect_pivot_offset = Vector2( 92, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.596078, 0.0627451, 0.0627451, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0.329412, 1 )
custom_colors/font_color_pressed = Color( 1, 0.470588, 0, 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="Panel" parent="."]
margin_left = 732.079
margin_top = 402.977
margin_right = 1003.08
margin_bottom = 587.977
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="settings"]
margin_left = 4.0
margin_right = 259.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 4 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="settings"]
margin_left = 4.0
margin_top = 24.0
margin_right = 259.0
margin_bottom = 31.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" type="VBoxContainer" parent="settings"]
margin_left = 11.0
margin_top = 32.0
margin_right = 269.0
margin_bottom = 185.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="requirement" type="SpinBox" parent="settings/list"]
margin_right = 258.0
margin_bottom = 24.0
min_value = 2.0
max_value = 6.0
value = 2.0
rounded = true
prefix = "Difficulty:"
__meta__ = {
"setting": "groupreq"
}

[node name="seedMulti" type="SpinBox" parent="settings/list"]
margin_top = 34.0
margin_right = 258.0
margin_bottom = 58.0
min_value = 1.0
max_value = 10.0
value = 1.0
rounded = true
prefix = "Seed Multiplier:"
__meta__ = {
"setting": "smulti"
}

[node name="volume" type="HSlider" parent="settings/list"]
margin_top = 68.0
margin_right = 258.0
margin_bottom = 84.0
step = 5.0
value = 100.0
tick_count = 20
ticks_on_borders = true
__meta__ = {
"setting": "volume"
}

[node name="Label" type="Label" parent="settings/list/volume"]
margin_left = -3.8147e-06
margin_top = -10.0
margin_right = 53.0
margin_bottom = 4.0
text = "Volume:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load" type="Button" parent="."]
visible = false
margin_left = 237.086
margin_top = 323.989
margin_right = 359.086
margin_bottom = 421.989
text = "Load last session"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="delete" type="Button" parent="load"]
margin_top = -36.0
margin_right = 122.0
margin_bottom = -12.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.258824, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.678431, 0, 1 )
text = "Delete session"

[node name="loadCode" type="Button" parent="."]
margin_left = 366.0
margin_top = 463.0
margin_right = 661.0
margin_bottom = 486.0
custom_fonts/font = ExtResource( 5 )
text = "Load using code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit" type="Button" parent="."]
margin_left = 564.0
margin_top = 324.0
margin_right = 660.0
margin_bottom = 423.0
custom_fonts/font = ExtResource( 6 )
text = "Make a level"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="seed" to="." method="text_in"]
[connection signal="text_entered" from="worldCode" to="." method="submit_world_code"]
[connection signal="pressed" from="start" to="." method="start_game"]
[connection signal="pressed" from="quit" to="." method="exit_game"]
[connection signal="value_changed" from="settings/list/requirement" to="." method="spin_change" binds= [ "groupreq" ]]
[connection signal="value_changed" from="settings/list/seedMulti" to="." method="spin_change" binds= [ "smulti" ]]
[connection signal="value_changed" from="settings/list/volume" to="." method="spin_change" binds= [ "volume" ]]
[connection signal="pressed" from="load" to="." method="load_last_session"]
[connection signal="pressed" from="load/delete" to="." method="delete_session"]
[connection signal="pressed" from="loadCode" to="." method="load_world"]
[connection signal="pressed" from="edit" to="." method="go_to_editor"]
